2007-03-29  Brian Bidulock  <bidulock@openss7.org>

	* src/drivers/inet.c: add T_SNDZERO for udp and rawip
	* src/drivers/rawip.c: add T_SNDZERO for udp and rawip
	* src/drivers/udp.c: add T_SNDZERO for udp and rawip


2007-03-25  Brian Bidulock  <bidulock@openss7.org>

	* acinclude.m4: support for 2.6.20-1.2307.fc5
	* doc/manual/news.texi: support for 2.6.20-1.2307.fc5
	* src/drivers/inet.c: support for 2.6.20-1.2307.fc5
	* src/drivers/rawip.c: support for 2.6.20-1.2307.fc5
	* src/drivers/tcp.c: support for 2.6.20-1.2307.fc5
	* src/drivers/udp.c: support for 2.6.20-1.2307.fc5
	* src/modules/tcpns.c: support for 2.6.20-1.2307.fc5

	* src/drivers/inet.c: flush corrections
	* src/drivers/rawip.c: flush corrections
	* src/drivers/udp.c: flush corrections

	* src/drivers/inet.c: register qlock option
	* src/drivers/rawip.c: register qlock option
	* src/drivers/tcp.c: register qlock option
	* src/drivers/udp.c: register qlock option

2007-03-15  Brian Bidulock  <bidulock@openss7.org>

	* doc/manual/news.texi: pushed release date
	* src/test/test-inet_raw.c: report failed expectations
	* src/test/test-inet_sctp.c: report failed expectations
	* src/test/test-inet_tcp.c: report failed expectations
	* src/test/test-inet_udp.c: report failed expectations

2007-03-12  Brian Bidulock  <bidulock@openss7.org>

	* src/test/test-inet_tcp.c: boosted default port 10000->18000
	* src/test/test-inet_sctp.c: boosted default port 10000->18000
	* src/test/test-inet_udp.c: boosted default port 10000->18000

	* tests/local.at: corrections for autotest 2.59b+

	* doc/man/man8/test-inet_raw.8.man: test updates
	* doc/man/man8/test-inet_sctp.8.man: test updates
	* doc/man/man8/test-inet_tcp.8.man: test updates
	* doc/man/man8/test-inet_udp.8.man: test updates
	* tests/testsuite-inet_raw.at: test updates
	* tests/testsuite-inet_raw2.at: test updates
	* tests/testsuite-inet_sctp.at: test updates
	* tests/testsuite-inet_tcp.at: test updates
	* tests/testsuite-inet_udp.at: test updates