@@ -1,6 +1,6 @@
 /*****************************************************************************
 
- @(#) $RCSfile: test-inet_raw.c,v $ $Name:  $($Revision: 0.9.2.54 $) $Date: 2007/03/15 10:22:25 $
+ @(#) $RCSfile: test-inet_raw.c,v $ $Name:  $($Revision: 0.9.2.55 $) $Date: 2007/04/04 01:15:46 $
 
  -----------------------------------------------------------------------------
 
@@ -59,11 +59,14 @@
 
  -----------------------------------------------------------------------------
 
- Last Modified $Date: 2007/03/15 10:22:25 $ by $Author: brian $
+ Last Modified $Date: 2007/04/04 01:15:46 $ by $Author: brian $
 
  -----------------------------------------------------------------------------
 
  $Log: test-inet_raw.c,v $
+ Revision 0.9.2.55  2007/04/04 01:15:46  brian
+ - T_SNDZERO ok for rawip and udp, cleanup of udp.c driver
+
  Revision 0.9.2.54  2007/03/15 10:22:25  brian
  - test case reporting and pushed release date one day
 
@@ -262,9 +265,9 @@
 
  *****************************************************************************/
 
-#ident "@(#) $RCSfile: test-inet_raw.c,v $ $Name:  $($Revision: 0.9.2.54 $) $Date: 2007/03/15 10:22:25 $"
+#ident "@(#) $RCSfile: test-inet_raw.c,v $ $Name:  $($Revision: 0.9.2.55 $) $Date: 2007/04/04 01:15:46 $"
 
-static char const ident[] = "$RCSfile: test-inet_raw.c,v $ $Name:  $($Revision: 0.9.2.54 $) $Date: 2007/03/15 10:22:25 $";
+static char const ident[] = "$RCSfile: test-inet_raw.c,v $ $Name:  $($Revision: 0.9.2.55 $) $Date: 2007/04/04 01:15:46 $";
 
 /*
  *  Simple test program for INET streams.
@@ -6455,7 +6458,7 @@ test_case_1_2(int child)
 		if (last_info.CURRENT_state != TS_UNBND)
 			goto failure;
 		state++;
-		if (last_info.PROVIDER_flag != T_XPG4_1|T_SNDZERO)
+		if (last_info.PROVIDER_flag != (T_XPG4_1|T_SNDZERO))
 			goto failure;
 		break;
 	case T_INET_UDP:
@@ -6486,7 +6489,7 @@ test_case_1_2(int child)
 		if (last_info.CURRENT_state != TS_UNBND)
 			goto failure;
 		state++;
-		if (last_info.PROVIDER_flag != T_XPG4_1|T_SNDZERO)
+		if (last_info.PROVIDER_flag != (T_XPG4_1|T_SNDZERO))
 			goto failure;
 		break;
 	case T_INET_TCP:
@@ -6517,7 +6520,7 @@ test_case_1_2(int child)
 		if (last_info.CURRENT_state != TS_UNBND)
 			goto failure;
 		state++;
-		if (last_info.PROVIDER_flag != T_XPG4_1)
+		if (last_info.PROVIDER_flag != (T_XPG4_1))
 			goto failure;
 		break;
 	case T_INET_SCTP:
@@ -6548,7 +6551,7 @@ test_case_1_2(int child)
 		if (last_info.CURRENT_state != TS_UNBND)
 			goto failure;
 		state++;
-		if (last_info.PROVIDER_flag != T_XPG4_1)
+		if (last_info.PROVIDER_flag != (T_XPG4_1))
 			goto failure;
 		break;
 	default:
@@ -6642,7 +6645,7 @@ test_case_1_3_1(int child)
 		if (last_info.CURRENT_state != TS_UNBND)
 			goto failure;
 		state++;
-		if (last_info.PROVIDER_flag != T_XPG4_1|T_SNDZERO)
+		if (last_info.PROVIDER_flag != (T_XPG4_1|T_SNDZERO))
 			goto failure;
 		break;
 	case T_INET_UDP:
@@ -6673,7 +6676,7 @@ test_case_1_3_1(int child)
 		if (last_info.CURRENT_state != TS_UNBND)
 			goto failure;
 		state++;
-		if (last_info.PROVIDER_flag != T_XPG4_1|T_SNDZERO)
+		if (last_info.PROVIDER_flag != (T_XPG4_1|T_SNDZERO))
 			goto failure;
 		break;
 	case T_INET_TCP:
@@ -6704,7 +6707,7 @@ test_case_1_3_1(int child)
 		if (last_info.CURRENT_state != TS_UNBND)
 			goto failure;
 		state++;
-		if (last_info.PROVIDER_flag != T_XPG4_1)
+		if (last_info.PROVIDER_flag != (T_XPG4_1))
 			goto failure;
 		break;
 	case T_INET_SCTP:
@@ -6735,7 +6738,7 @@ test_case_1_3_1(int child)
 		if (last_info.CURRENT_state != TS_UNBND)
 			goto failure;
 		state++;
-		if (last_info.PROVIDER_flag != T_XPG4_1)
+		if (last_info.PROVIDER_flag != (T_XPG4_1))
 			goto failure;
 		break;
 	default:
